syntax = "proto3";
package sifchain.clp.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/sifchain/sifnode/x/clp/types";

message Params {
  uint64 min_create_pool_threshold = 1;
}
